--- a/week-08/weekend-practice/prac-2/webpack-starter-master/package.json
+++ b/week-08/weekend-practice/prac-2/webpack-starter-master/package.json
@@ -33,6 +33,8 @@
   },
   "dependencies": {
     "jquery": "^3.2.1",
+    "materialize-css": "^0.98.2",
+    "react-materialize": "^0.18.1",
     "redux": "^3.6.0"
   },
   "jest": {
